# game-engine

./: .gitignore  CMakeLists.txt  Makefile
assets/Maps/: Decorations.xml  legacy-fantasy.tiled-session
assets/Maps/Level-1/: 960x600map.tmx  960x640map.tmx  Backgrounds.xml  Decorations.xml  Some.xml  level-1-map.tmx  longx600map.tmx
assets/Maps/MyMap/: mymap.tmx
assets/Maps/legacy-fantasy/map/: Backgrounds.xml  level-1-map.tmx  level-1.tmx
assets/animations/: enemy.an  hero.an  knight.an  tree.an
assets/maps/: map.tmx
assets/textures/: data.tx
assets/textures/hero/: hero.tx
assets/textures/knight/: knight.tx
include/: constants.h  flags.h  pch.h  tinyxml2
include/constants/: constants.h  flags.h
src/: main.cpp
src/Animation/: Animation.cpp  Animation.h
src/Camera/: Camera.cpp  Camera.h
src/Characters/: Character.h  CharacterStateMachine.cpp  CharacterStateMachine.h
src/Characters/warrior/: Warrior.cpp  Warrior.h
src/Collision/Collider/: AABB.cpp  AABB.h  Collider.h  DynamicCollider.h  StaticCollider.h
src/Collision/CollisionManager/: CollisionManager.cpp  CollisionManager.h
src/Core/: Engine.cpp  Engine.h
src/Graphics/: TextureManager.cpp  TextureManager.h
src/Input/: Input.cpp  Input.h
src/Map/: GameMap.h  MapManager.cpp  MapManager.h
src/Map/Imageset/: Imageset.h  Objectset.cpp  Objectset.h  Tileset.cpp  Tileset.h
src/Map/Layer/: Layer.h  ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h
src/Math/: Point.h  Vector2D.h
src/Object/: GameObject.h  IObject.h
src/Physics/RigidBody/: RigidBody.cpp  RigidBody.h
src/Physics/Utils/: Transform.h
src/Timestamp/: Timestamp.cpp  Timestamp.h
src/animation/: Animation.cpp  Animation.h
src/characters/: Character.h
src/characters/warrior/: Warrior.cpp  Warrior.h
src/core/: Engine.cpp  Engine.h
src/graphics/: TextureManager.cpp  TextureManager.h
src/map/: GameMap.h  Layer.h  MapManager.h  TileLayer.cpp  TileLayer.h
src/object/: GameObject.h  IObject.h
src/physics/: Transform.h  Vector2D.h
src/physics/RigidBody/: RigidBody.cpp  RigidBody.h
src/timer/: Timer.cpp  Timer.h
testing/: Class.cpp  Class.h  pch.h  pch_testing.h  test  test.cpp
